--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 	<title> Kaitlyn Chau </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#2d2d2d">
+	<meta name="theme-color" content="#575757">
 	<link rel = "stylesheet" href = "./style.css">
 </head>
 
 <body>
 	<div class = "splash">
 		<div id = "centerpiece">
-			<h1> hi </h1>
-			<h3> nice to meet you </h3>
+			<h1> KAITLYN CHAU </h1>
+			<h2> hi there! </h2>
+			<h2> i am a senior from montgomery high school interested in computer science. </h2>
+			<a href = "mailto:kaitlynachau@gmail.com"> email me here</a>
 		</div>
 		<div>
 		</div>
 	</div>
+	<div class ="splash" style="background: #f6f1e8">
+	</div>
 </body>
-
+	
 <script>
 	console.log('hello world')
 </script>
