--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div id = "centerpiece">
 			<h1> KAITLYN CHAU </h1>
 			<h2> hi there! </h2>
-			<h2> i am a senior from montgomery high school interested in computer science. </h2>
-			<a href = "mailto:kaitlynachau@gmail.com"> email me here</a>
+			<h2> i am an incoming computer science student at NYU. </h2>
+			<a href = "mailto:kaitlynachau@gmail.com"> email me here!</a>
 		</div>
 		<div>
 		</div>
